[package]
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-rtfm"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
nb = "0.1.1"

[dependencies.cortex-m-rtfm]
git = "https://github.com/japaric/cortex-m-rtfm.git"
features= ["timer-queue"]

[dependencies.f3]
git = "https://github.com/rnestler/f3.git"
branch = "upgrade-device-crate"
features= ["rt"]

[dependencies.stm32f30x]
version = "0.8.0"
features= ["rt"]

[dependencies.stm32f30x-hal]
git = "https://github.com/rnestler/stm32f30x-hal.git"
branch = "update-device-crate"
features= ["rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "hello-rtfm"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
